<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTipsUmum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TipsUmum"
                android:fontFamily="sans-serif-light"
                android:padding="16dp"
                android:background="@drawable/rounded_item_background"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/tvTipsdiRumah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TipsdiRumah"
                android:fontFamily="sans-serif-light"
                android:padding="16dp"
                android:background="@drawable/rounded_item_background"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/tvTipsBelaDiri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TipsBelaDiri"
                android:fontFamily="sans-serif-light"
                android:padding="16dp"
                android:background="@drawable/rounded_item_background"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/tvTipsKejahatanSiber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TipsKejahatanSiber"
                android:fontFamily="sans-serif-light"
                android:padding="16dp"
                android:background="@drawable/rounded_item_background"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/tvTipsTempatUmum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TipsTempatUmum"
                android:fontFamily="sans-serif-light"
                android:padding="16dp"
                android:background="@drawable/rounded_item_background"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/tvTipsTransportasiUmum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TipsTransportasiUmum"
                android:fontFamily="sans-serif-light"
                android:padding="16dp"
                android:background="@drawable/rounded_item_background"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/tvTipsTambahan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TipsTambahan"
                android:fontFamily="sans-serif-light"
                android:padding="16dp"
                android:background="@drawable/rounded_item_background"
                android:layout_marginBottom="8dp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
